--- a/.env
+++ b/.env
@@ -1,1 +1,4 @@
 REACT_APP_API = e3c60fe73b55ea565cfda63e0c2faca6
+
+REACT_APP_AUTH0_DOMAIN = dev-33jsjmtr.us.auth0.com
+REACT_APP_AUTH0_CLIENT_ID = aIj14FRD5Hu1JVO4pLQFUcdq3KXzqoSA
